--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gatsby": "^4.0.2",
     "gatsby-theme-portfolio-minimal": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-social-icons": "^5.6.1"
   },
   "author": "Konstantin Münster <mail@konstantin.digital>",
   "license": "0BSD",
@@ -39,5 +40,8 @@
     "animations",
     "dark-mode",
     "gdpr-compliant"
-  ]
+  ],
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.5"
+  }
 }
